# file-navigator

./: .gitignore.txt  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
file_navigator/: __init__.py  abc_loader.py  loaders.py  matching.py  pathfinder.py
fpath_finder/: abc_loader.py  matching.py  pathfinder.py
path-finder/: __init__.py  abc_loader.py  example.py  loaders.py  matching.py  operators.py
tests/: test_baseloader.py  test_pathfider.py  test_pathmanager.py
