[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "path-finder"          # The package name
version = "0.1.0"            # The version of the package
description = "Flexible directory scanner, file path manager, and customizable file loader—all in one"
readme = "README.md"         # The README file (Markdown or reStructuredText)
license = { file = "LICENSE" }  # License file
authors = [
    { name = "Qomp4ss", email = "imaggine@gmail.com" }
]
maintainers = [
    { name = "Qomp4ss", email = "imaggine@gmail.com" }
]
keywords = ["example", "package"]  # Keywords for the package
classifiers = [                    # Trove classifiers
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [                   # List of runtime dependencies
    "pandas>=0.22"
]
python = ">=3.6"                   # Minimum Python version